--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trishana Cake Bakery - Crafting Sweet Memories</title>
+    <title>Our Cakes - Trishana Cake Bakery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,61 +13,94 @@
         <nav class="container">
             <a href="index.html" class="logo">Trishana</a>
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="cakes.html">Our Cakes</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cakes.html" class="active">Our Cakes</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section class="hero">
-            <div class="hero-content">
-                <h1>Trishana Cake Bakery</h1>
-                <p>Crafting Sweet Memories, One Slice at a Time.</p>
-                <a href="cakes.html" class="btn">Order Online Now</a>
-            </div>
-        </section>
-
-        <!-- Bestsellers Section -->
+        <!-- All Cakes Section - NOW POPULATED WITH MANY CAKE TYPES -->
         <section>
             <div class="container">
-                <h2 class="section-title">Our Customer Favorites</h2>
+                <h2 class="section-title">Explore All Our Creations</h2>
                 <div class="cake-grid">
+                    <!--! NOTE: All these cakes are new additions. You can replace the image links with your own photos later. -->
+
                     <!-- Cake 1 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/chocolate-fudge.jpg" alt="Decadent Chocolate Fudge Cake"> <!--! CUSTOMIZE HERE: Change image path -->
+                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&q=80&w=1987" alt="Decadent Chocolate Drip Cake">
                         <div class="cake-card-content">
-                            <h3>Decadent Chocolate Fudge</h3>
-                            <p>Starting from $45</p>
+                            <h3>Chocolate Drip Dream</h3>
+                            <p>Starting from $55</p>
                         </div>
                     </a>
                     <!-- Cake 2 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/red-velvet.jpg" alt="Royal Red Velvet Cake"> <!--! CUSTOMIZE HERE: Change image path -->
+                        <img src="https://images.unsplash.com/photo-1533134242443-d4fd215305ad?auto=format&fit=crop&q=80&w=1974" alt="Strawberry Bliss Cheesecake">
+                        <div class="cake-card-content">
+                            <h3>Strawberry Bliss Cheesecake</h3>
+                            <p>Starting from $45</p>
+                        </div>
+                    </a>
+                    <!-- Cake 3 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1519869325930-2813a447bb48?auto=format&fit=crop&q=80&w=1974" alt="Royal Red Velvet Cake">
                         <div class="cake-card-content">
                             <h3>Royal Red Velvet</h3>
                             <p>Starting from $50</p>
                         </div>
                     </a>
-                    <!-- Cake 3 -->
+                    <!-- Cake 4 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/fruit-cake.jpg" alt="Fresh Fruit Delight Cake"> <!--! CUSTOMIZE HERE: Change image path -->
+                        <img src="https://images.unsplash.com/photo-1614707267537-b85aaf00c8b2?auto=format&fit=crop&q=80&w=1974" alt="Rainbow Cupcake Box">
                         <div class="cake-card-content">
-                            <h3>Fresh Fruit Delight</h3>
-                            <p>Starting from $55</p>
+                            <h3>Rainbow Cupcakes (Box of 6)</h3>
+                            <p>$25</p>
+                        </div>
+                    </a>
+                    <!-- Cake 5 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1567171466295-4a553535d233?auto=format&fit=crop&q=80&w=1974" alt="Black Forest Gateau">
+                        <div class="cake-card-content">
+                            <h3>Black Forest Gateau</h3>
+                            <p>Starting from $60</p>
+                        </div>
+                    </a>
+                    <!-- Cake 6 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?auto=format&fit=crop&q=80&w=1974" alt="Ultimate Carrot Cake">
+                        <div class="cake-card-content">
+                            <h3>Ultimate Carrot Cake</h3>
+                            <p>Starting from $48</p>
+                        </div>
+                    </a>
+                    <!-- Cake 7 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1562447285-3da1a273556a?auto=format&fit=crop&q=80&w=1974" alt="Vegan Chocolate Avocado Cake">
+                        <div class="cake-card-content">
+                            <h3>Vegan Chocolate Avocado</h3>
+                            <p>Starting from $65</p>
+                        </div>
+                    </a>
+                    <!-- Cake 8 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1586985289936-339b65d5162d?auto=format&fit=crop&q=80&w=1974" alt="Zesty Lemon & Berry Cake">
+                        <div class="cake-card-content">
+                            <h3>Zesty Lemon & Berry</h3>
+                            <p>Starting from $52</p>
+                        </div>
+                    </a>
+                    <!-- Cake 9 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="https://images.unsplash.com/photo-1587329243739-de3f24dc1574?auto=format&fit=crop&q=80&w=1974" alt="Classic Tiramisu">
+                        <div class="cake-card-content">
+                            <h3>Cloud-like Tiramisu</h3>
+                            <p>Starting from $50</p>
                         </div>
                     </a>
                 </div>
-            </div>
-        </section>
-
-        <!-- About Snippet -->
-        <section style="background-color: #fff;">
-            <div class="container">
-                 <h2 class="section-title">Baked with Love & Passion</h2>
-                 <p style="max-width: 800px; margin: 0 auto;">From a family kitchen to your celebration, Trishana Cake Bakery has always been about more than just cake. It's about passion, quality ingredients, and the joy of creating something truly special for your memorable moments.</p>
             </div>
         </section>
     </main>
@@ -82,7 +115,6 @@
     <!-- Floating Chat Widget -->
     <div class="chat-widget">
         <div class="chat-options">
-            <!--! CUSTOMIZE HERE: Add your WhatsApp Number and Facebook Page name -->
             <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
             <a href="https://m.me/YourFacebookPageName" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
         </div>
