--- a/cake.html
+++ b/cake.html
@@ -8,87 +8,72 @@
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Header - THIS SECTION IS NOW CORRECTED -->
     <header>
         <nav class="container">
-            <a href="index.html" class="logo">Trishana</a>
+            <a href="index.html" class="logo">Trishana</a> <!-- Corrected: Points to home -->
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cakes.html" class="active">Our Cakes</a></li>
+                <li><a href="index.html">Home</a></li> <!-- Corrected: Points to home -->
+                <li><a href="cakes.html" class="active">Our Cakes</a></li> <!-- Stays the same, this is the active page -->
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- All Cakes Section -->
+        <!-- The rest of your cakes.html content goes here... -->
         <section>
             <div class="container">
                 <h2 class="section-title">Explore All Our Creations</h2>
                 <div class="cake-grid">
-                    <!-- ! CUSTOMIZE HERE: Add all your cakes. Copy and paste the "cake-card" block for each cake. -->
-
-                    <!-- Cake 1 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="images/chocolate-fudge.jpg" alt="Decadent Chocolate Fudge Cake">
-                        <div class="cake-card-content">
-                            <h3>Decadent Chocolate Fudge</h3>
-                            <p>Starting from $45</p>
-                        </div>
+                    <!-- Your 9 cake cards here... -->
+                     <a href="product.html" class="cake-card">
+                        <img src="images/chocolate-drip.jpg" alt="Decadent Chocolate Drip Cake">
+                        <div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from $55</p></div>
                     </a>
-                    <!-- Cake 2 -->
+                    <a href="product.html" class="cake-card">
+                        <img src="images/strawberry-cheesecake.jpg" alt="Strawberry Bliss Cheesecake">
+                        <div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from $45</p></div>
+                    </a>
                     <a href="product.html" class="cake-card">
                         <img src="images/red-velvet.jpg" alt="Royal Red Velvet Cake">
-                        <div class="cake-card-content">
-                            <h3>Royal Red Velvet</h3>
-                            <p>Starting from $50</p>
-                        </div>
+                        <div class="cake-card-content"><h3>Royal Red Velvet</h3><p>Starting from $50</p></div>
                     </a>
-                    <!-- Cake 3 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/fruit-cake.jpg" alt="Fresh Fruit Delight Cake">
-                        <div class="cake-card-content">
-                            <h3>Fresh Fruit Delight</h3>
-                            <p>Starting from $55</p>
-                        </div>
+                        <img src="images/rainbow-cupcakes.jpg" alt="Rainbow Cupcake Box">
+                        <div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>$25</p></div>
                     </a>
-                    <!-- Cake 4 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/cheesecake.jpg" alt="Classic New York Cheesecake">
-                        <div class="cake-card-content">
-                            <h3>New York Cheesecake</h3>
-                            <p>Starting from $40</p>
-                        </div>
+                        <img src="images/black-forest.jpg" alt="Black Forest Gateau">
+                        <div class="cake-card-content"><h3>Black Forest Gateau</h3><p>Starting from $60</p></div>
                     </a>
-                    <!-- Cake 5 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/cupcakes.jpg" alt="Assorted Cupcakes Box">
-                        <div class="cake-card-content">
-                            <h3>Assorted Cupcakes (Box of 6)</h3>
-                            <p>$25</p>
-                        </div>
+                        <img src="images/carrot-cake.jpg" alt="Ultimate Carrot Cake">
+                        <div class="cake-card-content"><h3>Ultimate Carrot Cake</h3><p>Starting from $48</p></div>
                     </a>
-                    <!-- Cake 6 -->
                     <a href="product.html" class="cake-card">
-                        <img src="images/vegan-cake.jpg" alt="Vegan Chocolate Avocado Cake">
-                        <div class="cake-card-content">
-                            <h3>Vegan Chocolate Avocado</h3>
-                            <p>Starting from $60</p>
-                        </div>
+                        <img src="images/vegan-chocolate.jpg" alt="Vegan Chocolate Avocado Cake">
+                        <div class="cake-card-content"><h3>Vegan Chocolate Avocado</h3><p>Starting from $65</p></div>
+                    </a>
+                    <a href="product.html" class="cake-card">
+                        <img src="images/lemon-berry.jpg" alt="Zesty Lemon & Berry Cake">
+                        <div class="cake-card-content"><h3>Zesty Lemon & Berry</h3><p>Starting from $52</p></div>
+                    </a>
+                    <a href="product.html" class="cake-card">
+                        <img src="images/tiramisu.jpg" alt="Classic Tiramisu">
+                        <div class="cake-card-content"><h3>Cloud-like Tiramisu</h3><p>Starting from $50</p></div>
                     </a>
                 </div>
             </div>
         </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer and Chat Widget... -->
     <footer>
         <div class="container">
             <p>© 2024 Trishana Cake Bakery. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <!-- Floating Chat Widget -->
     <div class="chat-widget">
         <div class="chat-options">
             <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
@@ -98,7 +83,6 @@
             <i class="fas fa-comment-dots"></i>
         </div>
     </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
