--- a/index.html
+++ b/index.html
@@ -3,120 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Cakes - Trishana Cake Bakery</title>
+    <title>Trishana Cake Bakery - Crafting Sweet Memories</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Header - CORRECTED -->
     <header>
         <nav class="container">
             <a href="index.html" class="logo">Trishana</a>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cakes.html" class="active">Our Cakes</a></li>
+                <li><a href="index.html" class="active">Home</a></li> <!-- 'active' class is now on Home -->
+                <li><a href="cakes.html">Our Cakes</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- All Cakes Section - NOW POPULATED WITH MANY CAKE TYPES -->
+        <!-- Hero Section -->
+        <section class="hero" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1559620192-0f2b363e5e93?auto=format&fit=crop&q=80&w=1964');">
+            <div class="hero-content">
+                <h1>Trishana Cake Bakery</h1>
+                <p>Crafting Sweet Memories, One Slice at a Time.</p>
+                <a href="cakes.html" class="btn">Order Online Now</a>
+            </div>
+        </section>
+
+        <!-- Bestsellers Section -->
         <section>
             <div class="container">
-                <h2 class="section-title">Explore All Our Creations</h2>
+                <h2 class="section-title">Our Customer Favorites</h2>
                 <div class="cake-grid">
-                    <!--! NOTE: All these cakes are new additions. You can replace the image links with your own photos later. -->
-
                     <!-- Cake 1 -->
                     <a href="product.html" class="cake-card">
                         <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&q=80&w=1987" alt="Decadent Chocolate Drip Cake">
-                        <div class="cake-card-content">
-                            <h3>Chocolate Drip Dream</h3>
-                            <p>Starting from $55</p>
-                        </div>
+                        <div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from $55</p></div>
                     </a>
                     <!-- Cake 2 -->
                     <a href="product.html" class="cake-card">
                         <img src="https://images.unsplash.com/photo-1533134242443-d4fd215305ad?auto=format&fit=crop&q=80&w=1974" alt="Strawberry Bliss Cheesecake">
-                        <div class="cake-card-content">
-                            <h3>Strawberry Bliss Cheesecake</h3>
-                            <p>Starting from $45</p>
-                        </div>
+                        <div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from $45</p></div>
                     </a>
                     <!-- Cake 3 -->
                     <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1519869325930-2813a447bb48?auto=format&fit=crop&q=80&w=1974" alt="Royal Red Velvet Cake">
-                        <div class="cake-card-content">
-                            <h3>Royal Red Velvet</h3>
-                            <p>Starting from $50</p>
-                        </div>
+                        <img src="https://images.unsplash.com/photo-1606890737304-57a1ca8a5b47?auto=format&fit=crop&q=80&w=1964" alt="Celebration Confetti Cake">
+                        <div class="cake-card-content"><h3>Celebration Confetti</h3><p>Starting from $50</p></div>
                     </a>
-                    <!-- Cake 4 -->
+                     <!-- Cake 4 -->
                     <a href="product.html" class="cake-card">
                         <img src="https://images.unsplash.com/photo-1614707267537-b85aaf00c8b2?auto=format&fit=crop&q=80&w=1974" alt="Rainbow Cupcake Box">
-                        <div class="cake-card-content">
-                            <h3>Rainbow Cupcakes (Box of 6)</h3>
-                            <p>$25</p>
-                        </div>
-                    </a>
-                    <!-- Cake 5 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1567171466295-4a553535d233?auto=format&fit=crop&q=80&w=1974" alt="Black Forest Gateau">
-                        <div class="cake-card-content">
-                            <h3>Black Forest Gateau</h3>
-                            <p>Starting from $60</p>
-                        </div>
-                    </a>
-                    <!-- Cake 6 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?auto=format&fit=crop&q=80&w=1974" alt="Ultimate Carrot Cake">
-                        <div class="cake-card-content">
-                            <h3>Ultimate Carrot Cake</h3>
-                            <p>Starting from $48</p>
-                        </div>
-                    </a>
-                    <!-- Cake 7 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1562447285-3da1a273556a?auto=format&fit=crop&q=80&w=1974" alt="Vegan Chocolate Avocado Cake">
-                        <div class="cake-card-content">
-                            <h3>Vegan Chocolate Avocado</h3>
-                            <p>Starting from $65</p>
-                        </div>
-                    </a>
-                    <!-- Cake 8 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1586985289936-339b65d5162d?auto=format&fit=crop&q=80&w=1974" alt="Zesty Lemon & Berry Cake">
-                        <div class="cake-card-content">
-                            <h3>Zesty Lemon & Berry</h3>
-                            <p>Starting from $52</p>
-                        </div>
-                    </a>
-                    <!-- Cake 9 -->
-                    <a href="product.html" class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1587329243739-de3f24dc1574?auto=format&fit=crop&q=80&w=1974" alt="Classic Tiramisu">
-                        <div class="cake-card-content">
-                            <h3>Cloud-like Tiramisu</h3>
-                            <p>Starting from $50</p>
-                        </div>
+                        <div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>$25</p></div>
                     </a>
                 </div>
             </div>
         </section>
+
+        <!-- About Snippet -->
+        <section style="background-color: #fff;">
+            <div class="container">
+                 <h2 class="section-title">Baked with Love & Passion</h2>
+                 <p style="max-width: 800px; margin: 0 auto;">From a family kitchen to your celebration, Trishana Cake Bakery has always been about more than just cake. It's about passion, quality ingredients, and the joy of creating something truly special for your memorable moments.</p>
+            </div>
+        </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer and Chat Widget - CORRECTED AND STANDARDIZED -->
     <footer>
         <div class="container">
             <p>© 2024 Trishana Cake Bakery. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <!-- Floating Chat Widget -->
     <div class="chat-widget">
         <div class="chat-options">
-            <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://m.me/YourFacebookPageName" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
+            <a href="https://wa.me/9779845883222" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
+            <!-- ! CUSTOMIZE HERE: Replace 'YourFacebookPageUsername' with your page's actual username -->
+            <a href="https://m.me/YourFacebookPageUsername" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
         </div>
         <div class="chat-widget-button" id="chat-toggle">
             <i class="fas fa-comment-dots"></i>
