--- a/cake.html
+++ b/cake.html
@@ -8,67 +8,38 @@
 </head>
 <body>
 
-    <!-- Header - THIS SECTION IS NOW CORRECTED -->
+    <!-- Header - CORRECTED -->
     <header>
         <nav class="container">
-            <a href="index.html" class="logo">Trishana</a> <!-- Corrected: Points to home -->
+            <a href="index.html" class="logo">Trishana</a>
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- Corrected: Points to home -->
-                <li><a href="cakes.html" class="active">Our Cakes</a></li> <!-- Stays the same, this is the active page -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cakes.html" class="active">Our Cakes</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- The rest of your cakes.html content goes here... -->
         <section>
             <div class="container">
                 <h2 class="section-title">Explore All Our Creations</h2>
                 <div class="cake-grid">
-                    <!-- Your 9 cake cards here... -->
-                     <a href="product.html" class="cake-card">
-                        <img src="images/chocolate-drip.jpg" alt="Decadent Chocolate Drip Cake">
-                        <div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from $55</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/strawberry-cheesecake.jpg" alt="Strawberry Bliss Cheesecake">
-                        <div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from $45</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/red-velvet.jpg" alt="Royal Red Velvet Cake">
-                        <div class="cake-card-content"><h3>Royal Red Velvet</h3><p>Starting from $50</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/rainbow-cupcakes.jpg" alt="Rainbow Cupcake Box">
-                        <div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>$25</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/black-forest.jpg" alt="Black Forest Gateau">
-                        <div class="cake-card-content"><h3>Black Forest Gateau</h3><p>Starting from $60</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/carrot-cake.jpg" alt="Ultimate Carrot Cake">
-                        <div class="cake-card-content"><h3>Ultimate Carrot Cake</h3><p>Starting from $48</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/vegan-chocolate.jpg" alt="Vegan Chocolate Avocado Cake">
-                        <div class="cake-card-content"><h3>Vegan Chocolate Avocado</h3><p>Starting from $65</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/lemon-berry.jpg" alt="Zesty Lemon & Berry Cake">
-                        <div class="cake-card-content"><h3>Zesty Lemon & Berry</h3><p>Starting from $52</p></div>
-                    </a>
-                    <a href="product.html" class="cake-card">
-                        <img src="images/tiramisu.jpg" alt="Classic Tiramisu">
-                        <div class="cake-card-content"><h3>Cloud-like Tiramisu</h3><p>Starting from $50</p></div>
-                    </a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&q=80&w=1987" alt="Decadent Chocolate Drip Cake"><div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from $55</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1533134242443-d4fd215305ad?auto=format&fit=crop&q=80&w=1974" alt="Strawberry Bliss Cheesecake"><div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from $45</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1519869325930-2813a447bb48?auto=format&fit=crop&q=80&w=1974" alt="Royal Red Velvet Cake"><div class="cake-card-content"><h3>Royal Red Velvet</h3><p>Starting from $50</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1614707267537-b85aaf00c8b2?auto=format&fit=crop&q=80&w=1974" alt="Rainbow Cupcake Box"><div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>$25</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1567171466295-4a553535d233?auto=format&fit=crop&q=80&w=1974" alt="Black Forest Gateau"><div class="cake-card-content"><h3>Black Forest Gateau</h3><p>Starting from $60</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?auto=format&fit=crop&q=80&w=1974" alt="Ultimate Carrot Cake"><div class="cake-card-content"><h3>Ultimate Carrot Cake</h3><p>Starting from $48</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1562447285-3da1a273556a?auto=format&fit=crop&q=80&w=1974" alt="Vegan Chocolate Avocado Cake"><div class="cake-card-content"><h3>Vegan Chocolate Avocado</h3><p>Starting from $65</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1586985289936-339b65d5162d?auto=format&fit=crop&q=80&w=1974" alt="Zesty Lemon & Berry Cake"><div class="cake-card-content"><h3>Zesty Lemon & Berry</h3><p>Starting from $52</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1587329243739-de3f24dc1574?auto=format&fit=crop&q=80&w=1974" alt="Classic Tiramisu"><div class="cake-card-content"><h3>Cloud-like Tiramisu</h3><p>Starting from $50</p></div></a>
                 </div>
             </div>
         </section>
     </main>
     
-    <!-- Footer and Chat Widget... -->
+    <!-- Footer and Chat Widget - CORRECTED AND STANDARDIZED -->
     <footer>
         <div class="container">
             <p>© 2024 Trishana Cake Bakery. All Rights Reserved.</p>
@@ -76,13 +47,15 @@
     </footer>
     <div class="chat-widget">
         <div class="chat-options">
-            <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://m.me/YourFacebookPageName" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
+            <a href="https://wa.me/9779845883222" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
+            <!-- ! CUSTOMIZE HERE: Replace 'YourFacebookPageUsername' with your page's actual username -->
+            <a href="https://m.me/YourFacebookPageUsername" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
         </div>
         <div class="chat-widget-button" id="chat-toggle">
             <i class="fas fa-comment-dots"></i>
         </div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
