--- a/product.html
+++ b/product.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decadent Chocolate Fudge - Trishana Cake Bakery</title> <!--! CUSTOMIZE HERE: Change cake name -->
+    <title>Decadent Chocolate Fudge - Trishana Cake Bakery</title>
     <link rel="stylesheet" href="style.css">
-    <style> /* Additional styles for this page */
+    <style>
         .product-page { display: flex; gap: 3rem; text-align: left; }
         .product-image { flex: 1; }
         .product-details { flex: 1; }
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Header - CORRECTED -->
     <header>
         <nav class="container">
             <a href="index.html" class="logo">Trishana</a>
@@ -34,15 +34,14 @@
     <main>
         <section>
             <div class="container product-page">
-                <!--! CUSTOMIZE EVERYTHING IN THIS SECTION FOR EACH CAKE -->
                 <div class="product-image">
+                    <!-- ! CUSTOMIZE HERE: Change this image to match the product -->
                     <img src="images/chocolate-fudge.jpg" alt="Decadent Chocolate Fudge Cake">
                 </div>
                 <div class="product-details">
                     <h1>Decadent Chocolate Fudge</h1>
                     <p class="price">$45.00</p>
                     <p class="description">Our signature cake. Three layers of rich, moist chocolate cake filled and frosted with our silky smooth chocolate fudge ganache. A true chocolate lover's dream.</p>
-                    
                     <form>
                         <label for="size">Size:</label>
                         <select name="size" id="size">
@@ -50,10 +49,8 @@
                             <option value="8-inch">8-inch (Serves 12-15) - $60</option>
                             <option value="10-inch">10-inch (Serves 20-25) - $80</option>
                         </select>
-
                         <label for="message">Message on Cake (Optional):</label>
                         <input type="text" id="message" placeholder="e.g., Happy Birthday, Anna!">
-
                         <button type="submit" class="btn">Add to Cart</button>
                     </form>
                 </div>
@@ -61,18 +58,17 @@
         </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer and Chat Widget - CORRECTED AND STANDARDIZED -->
     <footer>
         <div class="container">
             <p>© 2024 Trishana Cake Bakery. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <!-- Floating Chat Widget -->
     <div class="chat-widget">
         <div class="chat-options">
-            <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://m.me/YourFacebookPageName" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
+            <a href="https://wa.me/9779845883222" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
+            <!-- ! CUSTOMIZE HERE: Replace 'YourFacebookPageUsername' with your page's actual username -->
+            <a href="https://m.me/YourFacebookPageUsername" target="_blank" class="facebook-btn"><i class="fab fa-facebook-messenger"></i></a>
         </div>
         <div class="chat-widget-button" id="chat-toggle">
             <i class="fas fa-comment-dots"></i>
