--- a/cakes.html
+++ b/cakes.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-    <!-- Header - CORRECTED -->
     <header>
         <nav class="container">
             <a href="index.html" class="logo">Trishana</a>
@@ -25,15 +24,15 @@
             <div class="container">
                 <h2 class="section-title">Explore All Our Creations</h2>
                 <div class="cake-grid">
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&q=80&w=1987" alt="Decadent Chocolate Drip Cake"><div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from $55</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1533134242443-d4fd215305ad?auto=format&fit=crop&q=80&w=1974" alt="Strawberry Bliss Cheesecake"><div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from $45</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1519869325930-2813a447bb48?auto=format&fit=crop&q=80&w=1974" alt="Royal Red Velvet Cake"><div class="cake-card-content"><h3>Royal Red Velvet</h3><p>Starting from $50</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1614707267537-b85aaf00c8b2?auto=format&fit=crop&q=80&w=1974" alt="Rainbow Cupcake Box"><div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>$25</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1567171466295-4a553535d233?auto=format&fit=crop&q=80&w=1974" alt="Black Forest Gateau"><div class="cake-card-content"><h3>Black Forest Gateau</h3><p>Starting from $60</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?auto=format&fit=crop&q=80&w=1974" alt="Ultimate Carrot Cake"><div class="cake-card-content"><h3>Ultimate Carrot Cake</h3><p>Starting from $48</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1562447285-3da1a273556a?auto=format&fit=crop&q=80&w=1974" alt="Vegan Chocolate Avocado Cake"><div class="cake-card-content"><h3>Vegan Chocolate Avocado</h3><p>Starting from $65</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1586985289936-339b65d5162d?auto=format&fit=crop&q=80&w=1974" alt="Zesty Lemon & Berry Cake"><div class="cake-card-content"><h3>Zesty Lemon & Berry</h3><p>Starting from $52</p></div></a>
-                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1587329243739-de3f24dc1574?auto=format&fit=crop&q=80&w=1974" alt="Classic Tiramisu"><div class="cake-card-content"><h3>Cloud-like Tiramisu</h3><p>Starting from $50</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&q=80&w=1987" alt="Decadent Chocolate Drip Cake"><div class="cake-card-content"><h3>Chocolate Drip Dream</h3><p>Starting from rs 500</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1533134242443-d4fd215305ad?auto=format&fit=crop&q=80&w=1974" alt="Strawberry Bliss Cheesecake"><div class="cake-card-content"><h3>Strawberry Bliss Cheesecake</h3><p>Starting from rs 500</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1519869325930-2813a447bb48?auto=format&fit=crop&q=80&w=1974" alt="Royal Red Velvet Cake"><div class="cake-card-content"><h3>Royal Red Velvet</h3><p>Starting from rs 600</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1614707267537-b85aaf00c8b2?auto=format&fit=crop&q=80&w=1974" alt="Rainbow Cupcake Box"><div class="cake-card-content"><h3>Rainbow Cupcakes (Box of 6)</h3><p>rs 690</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1567171466295-4a553535d233?auto=format&fit=crop&q=80&w=1974" alt="Black Forest Gateau"><div class="cake-card-content"><h3>Black Forest Gateau</h3><p>Starting from rs 1000</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?auto=format&fit=crop&q=80&w=1974" alt="Ultimate Carrot Cake"><div class="cake-card-content"><h3>Ultimate Carrot Cake</h3><p>Starting from rs 2000</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1562447285-3da1a273556a?auto=format&fit=crop&q=80&w=1974" alt="Vegan Chocolate Avocado Cake"><div class="cake-card-content"><h3>Vegan Chocolate Avocado</h3><p>Starting from rs 1500</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1586985289936-339b65d5162d?auto=format&fit=crop&q=80&w=1974" alt="Zesty Lemon & Berry Cake"><div class="cake-card-content"><h3>Zesty Lemon & Berry</h3><p>Starting from rs 1200</p></div></a>
+                    <a href="product.html" class="cake-card"><img src="https://images.unsplash.com/photo-1587329243739-de3f24dc1574?auto=format&fit=crop&q=80&w=1974" alt="Classic Tiramisu"><div class="cake-card-content"><h3>Cloud-like Tiramisu</h3><p>Starting from rs 2500</p></div></a>
                 </div>
             </div>
         </section>
