--- a/product.html
+++ b/product.html
@@ -40,12 +40,12 @@
                 </div>
                 <div class="product-details">
                     <h1>Decadent Chocolate Fudge</h1>
-                    <p class="price">$45.00</p>
+                    <p class="price">rs 500</p>
                     <p class="description">Our signature cake. Three layers of rich, moist chocolate cake filled and frosted with our silky smooth chocolate fudge ganache. A true chocolate lover's dream.</p>
                     <form>
                         <label for="size">Size:</label>
                         <select name="size" id="size">
-                            <option value="6-inch">6-inch (Serves 8-10) - $45</option>
+                            <option value="half-pound"> (Serves 8-10) - $45</option>
                             <option value="8-inch">8-inch (Serves 12-15) - $60</option>
                             <option value="10-inch">10-inch (Serves 20-25) - $80</option>
                         </select>
