--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a class="nav-link" href="index.html">Home</a></li>
-                    <li><a class="nav-link" href="about.html">About</a></li>
-                    <li><a class="nav-link" href="products.html">Products</a></li>
-                    <li><a class="nav-link" href="services.html">Services</a></li>
-                    <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li><a class="nav-link" href="/">Home</a></li>
+                    <li><a class="nav-link" href="/about/">About</a></li>
+                    <li><a class="nav-link" href="/products/">Products</a></li>
+                    <li><a class="nav-link" href="/services/">Services</a></li>
+                    <li><a class="nav-link" href="/gallery/">Gallery</a></li>
+                    <li><a class="nav-link" href="/contact/">Contact</a></li>
                     <li><a href="custom-order.html" class="cta-button">Custom Order</a></li>
                 </ul>
             </nav>
@@ -199,10 +199,10 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="products.html">Our Cakes</a></li>
-                    <li><a href="custom-order.html">Custom Order</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/about/">About Us</a></li>
+                    <li><a href="/products/">Our Cakes</a></li>
+                    <li><a href="/custom-order/">Custom Order</a></li>
+                    <li><a href="/contact/">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-newsletter">
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© <span id="copyright-year">2024</span> Tirshana Cake Bakery. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+            <p>© <span id="copyright-year">2025</span> Tirshana Cake Bakery. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
         </div>
     </footer>
 
